it's about time
read from settings.cfg
check for eula and give warning
stop auto-restarting on "first" crash (or /stop)